--- a/app/components/BlogPost.module.css
+++ b/app/components/BlogPost.module.css
@@ -8,7 +8,7 @@
 .blog-post-content h1,
 .blog-post-content h2,
 .blog-post-content h3 {
-  font-family: "Georgia", serif;
+  font-family: "serif";
   line-height: 1.25;
   margin-top: 20px;
   margin-bottom: 20px;
